<resources>
    <string name="app_name">Just Java - EN</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="name">Name</string>
    <string name="add_whipped_cream">Add Whipped Cream</string>
    <string name="add_chocolate">Add Chocolate</string>
    <string name="total">Total</string>
    <string name="thank_you">Thank you</string>
    <string name="email_subject">Just Java - Order Summary</string>
    <string name="max_quantity">Max Quantity</string>
    <string name="min_quantity">Min Quantity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
