<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.madeinnordeste.justjava.MainActivity"
    android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_editText" />

    <TextView
        android:text="@string/toppings"
        style="@style/HeaderTextStyle"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:id="@+id/whipped_cream_checkbox"
        android:textSize="16sp"
        android:paddingStart="24dp"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:id="@+id/chocolate_checkbox"
        android:textSize="16sp"
        android:paddingStart="24dp"
        android:checked="false" />


    <TextView
        android:text="@string/quantity"
        style="@style/HeaderTextStyle" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:id="@+id/btnDecrement"
            android:onClick="decrement" />

        <TextView
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="16sp"
            android:textColor="#000"
            android:id="@+id/quantity_text_view"
            />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:id="@+id/btnIncrement"
            android:onClick="increment" />


    </LinearLayout>


    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="ORDER SUMMARY"
        android:paddingTop="10dp"
        android:layout_marginTop="15dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:textColor="#000"
        android:id="@+id/order_summaty_text_view"
        android:layout_marginTop="16dp"/>
    //-->

    <Button
        android:tag="123"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_marginTop="15dp"
        android:onClick="submitOrder"
        android:id="@+id/button" />

</LinearLayout>
